urcu/tests/ui/list/front-fail-0.stderr
error[E0505]: cannot move out of `list` because it is borrowed
  --> tests/ui/list/front-fail-0.rs:10:10
   |
7  |     let list = RcuList::<u32>::new();
   |         ---- binding `list` declared here
8  |     let guard = context.rcu_read_lock();
9  |     let front = list.front(&guard);
   |                 ---- borrow of `list` occurs here
10 |     drop(list);
   |          ^^^^ move out of `list` occurs here
11 |     log::info!("{:?}", front);
   |                        ----- borrow later used here
